# overleaf-sync

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt
olsync/: __init__.py  olbrowserlogin.py  olclient.py  olsync.py
tests/: test_olclient.py
